--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.2.3",
+    "@next/third-parties": "^15.1.8",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.0.9",
-    "@next/third-parties": "^15.1.8",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^11.11.9",
     "next": "15.2.3",
+    "nodemailer": "^7.0.3",
     "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -33,8 +36,6 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.5.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.11.9",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0"
   },
